Add ArchiUnit to structure unit test for the document service